# nvImageCodec

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .nspect-vuln-allowlist.toml  Acknowledgements.txt  CMakeLists.txt  LICENSE.txt  README.md  ca-chain.crt  coverity.sh  requirements-dev.txt
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile  doxygen.conf
docs/sphinx/: CMakeLists.txt  acknowledgements.rst  c_api.rst  conf.py  environment_variables.rst  getting_started.rst  index.rst  installation.rst  license.rst  prerequisites.rst  py_api.rst  release_notes_v0.1.0-alpha.1.rst  release_notes_v0.1.0-alpha.2.rst  release_notes_v0.2.0.rst  release_notes_v0.3.0.rst  release_notes_v0.4.0.rst  samples.rst  security.rst
example/: CMakeLists.txt  README.md
example/example_decode/: CMakeLists.txt  main.cpp
example/example_high_level_api/: CMakeLists.txt  command_line_params.h  main.cpp
example/example_module/: CMakeLists.txt  example_decoder.cpp  example_encoder.cpp  example_module.cpp  example_parser.cpp  example_parser.h  exceptions.h
example/nvbmp/: CMakeLists.txt  example_encoder.cpp  example_parser.cpp  example_parser.h  log.h  nvbmp_decoder.cpp  nvbmp_encoder.cpp  nvbmp_module.cpp  nvbmp_parser.cpp
example/nvimproc/: CMakeLists.txt  command_line_params.h  main.cpp
example/nvimtrans/: CMakeLists.txt  command_line_params.h  log.h  main.cpp  nvpxm.cpp  nvpxm.h
example/python/: batch_sample.ipynb  cucim_sample.ipynb  cupy_sample.ipynb  cvcuda_batch_classification.py  cvcuda_sample.ipynb  nvcv_sample.ipynb  nvimgcodec.ipynb  nvimgcodecs.ipynb  tensorflow_sample.ipynb
extensions/: CMakeLists.txt
extensions/libjpeg_turbo/: CMakeLists.txt  ext_module.cpp  jpeg_handle.cpp  jpeg_handle.h  jpeg_mem.cpp  jpeg_mem.h  jpeg_utils.h  libjpeg_turbo_decoder.cpp  libjpeg_turbo_decoder.h  libjpeg_turbo_ext.cpp  libjpeg_turbo_ext.h  log.h
extensions/libtiff/: CMakeLists.txt  error_handling.h  ext_module.cpp  libtiff_decoder.cpp  libtiff_decoder.h  libtiff_ext.cpp  libtiff_ext.h  log.h
extensions/nvbmp/: CMakeLists.txt  decoder.cpp  decoder.h  encoder.cpp  encoder.h  ext_module.cpp  log.h  nvbmp_ext.cpp  nvbmp_ext.h  parser.cpp  parser.h
extensions/nvjpeg/: CMakeLists.txt  XmJpegDecoder.cpp  XmJpegEncoder.cpp  XmJpegErrorHandling.h  XmJpegHwDecoder.cpp  XmJpegModule.cpp  XmJpegParser.cpp  XmJpegParser.h  XmJpegTypeConvert.cpp  cuda_decoder.cpp  cuda_decoder.h  cuda_encoder.cpp  cuda_encoder.h  dummy_lossless_decoder.cpp  errors_handling.h  exception.cpp  exception.h  ext_module.cpp  hw_decoder.cpp  hw_decoder.h  log.h  lossless_decoder.cpp  lossless_decoder.h  nvjpeg_ext.cpp  nvjpeg_ext.h  nvjpeg_utils.cpp  nvjpeg_utils.h  parser.cpp  parser.h  type_convert.cpp  type_convert.h
extensions/nvjpeg2k/: CMakeLists.txt  cuda_decoder.cpp  cuda_decoder.h  cuda_encoder.cpp  cuda_encoder.h  error_handling.h  exception.cpp  exception.h  ext_module.cpp  jpeg2k_xm_decoder.cpp  jpeg2k_xm_decoder.h  jpeg2k_xm_encoder.cpp  jpeg2k_xm_log.h  jpeg2k_xm_module.cpp  jpeg2k_xm_parser.cpp  jpeg2k_xm_parser.h  log.h  nvjpeg2k_ext.cpp  nvjpeg2k_ext.h  parser.cpp  parser.h
extensions/nvpnm/: CMakeLists.txt  encoder.cpp  encoder.h  error_handling.h  ext_module.cpp  log.h  nvpnm_ext.cpp  nvpnm_ext.h
extensions/opencv/: CMakeLists.txt  ext_module.cpp  log.h  opencv_decoder.cpp  opencv_decoder.h  opencv_ext.cpp  opencv_ext.h
extensions/utils/: stream_ctx.h
python/: CMakeLists.txt  MANIFEST.in  __init__.py.in  backend.cpp  backend.h  backend_kind.cpp  backend_kind.h  backend_params.cpp  backend_params.h  bundle-wheel.sh  chroma_subsampling.cpp  chroma_subsampling.h  code_stream.cpp  code_stream.h  color_spec.cpp  color_spec.h  cuda_utils.h  decode_params.cpp  decode_params.h  decode_source.cpp  decode_source.h  decoder.cpp  decoder.h  device_guard.h  dlpack_utils.cpp  dlpack_utils.h  encode_params.cpp  encode_params.h  encoder.cpp  encoder.h  error_handling.cpp  error_handling.h  image.cpp  image.h  image_buffer_kind.cpp  image_buffer_kind.h  jpeg2k_bitstream_type.cpp  jpeg2k_bitstream_type.h  jpeg2k_encode_params.cpp  jpeg2k_encode_params.h  (+14 more)
src/: CMakeLists.txt  builtin_modules.cpp  builtin_modules.h  code_stream.cpp  code_stream.h  codec.cpp  codec.h  codec_registry.cpp  codec_registry.h  convert.h  debug_messenger.h  decode_state.cpp  decode_state.h  decode_state_batch.cpp  decode_state_batch.h  decoder_worker.cpp  decoder_worker.h  default_debug_messenger.cpp  default_debug_messenger.h  default_executor.cpp  default_executor.h  default_image_processor.cpp  default_image_processor.h  default_image_processor_gpu.cu  default_postprocessor.cpp  default_postprocessor.h  device_guard.cpp  device_guard.h  directory_scaner.h  encode_state.cpp  encode_state.h  encode_state_batch.cpp  encode_state_batch.h  encoder_worker.cpp  encoder_worker.h  environment.h  exception.cpp  exception.h  file_ext_codec.h  file_input_stream.cpp  (+84 more)
src/dynlink/: CMakeLists.txt  dynlink_cuda.cpp  dynlink_npp.cc  dynlink_npp.cpp  dynlink_nvjpeg.cc  dynlink_nvjpeg.cpp  dynlink_nvjpeg.h  dynlink_nvjpeg2k.cc  dynlink_nvjpeg2k.cpp
src/dynlink_cuda/: CMakeLists.txt  dynlink_cuda.cc  dynlink_cuda.cpp  (+1 more)
test/: CMakeLists.txt  code_stream_test.cpp  codec_registry_test.cpp  codec_test.cpp  decoder_worker_test.cpp  device_guard_test.cpp  encoder_worker_test.cpp  mock_codec.h  mock_codec_registry.h  mock_directory_scaner.h  mock_environment.h  mock_executor.h  mock_image_decoder.h  mock_image_decoder_factory.h  mock_image_encoder.h  mock_image_encoder_factory.h  mock_image_parser.h  mock_image_parser_factory.h  mock_image_processor.h  mock_iostream_factory.h  mock_library_loader.h  mock_logger.h  mock_parse_state.h  mock_postprocessor.h  nvimgcodec_tests.cpp  nvimgcodec_tests.h  nvimgcodecs_tests.cpp  nvimgcodecs_tests.h  plugin_framework_test.cpp  processing_results_test.cpp  requirements_cu11.txt  requirements_cu12.txt  requirements_win_cu11.txt  requirements_win_cu12.txt  test.bat  test_decode_dtype.py  test_decode_jpeg_lossless.py  test_decode_multichannel.py  test_python.py  test_transcode.py  (+4 more)
(+185 files in other folders)
