set(EXAMPLE_NVIMGCDCS_DECODE_NAME example_nvimgcdc_decode)  

set(EXAMPLE_NVIMGCDCS_DECODE_SRC
      main.cpp
)
include_directories(
  ../../include
)   

message(STATUS "CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES: ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}")
include_directories(SYSTEM ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})

find_library(CUDART_SHARED 
    NAMES cudart
    PATHS ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES}
    )


add_executable(${EXAMPLE_NVIMGCDCS_DECODE_NAME} ${EXAMPLE_NVIMGCDCS_DECODE_SRC})

set_property(TARGET ${EXAMPLE_NVIMGCDCS_DECODE_NAME} PROPERTY CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(${EXAMPLE_NVIMGCDCS_DECODE_NAME} PUBLIC nvimgcodecs ${CUDART_SHARED})


