set(NVIMGCDCS_EXAMPLE_HIGH_LEVEL_API_NAME nvimgcodecs_example_high_level_api)  

set(NVIMGCDCS_EXAMPLE_HIGH_LEVEL_API_SRC
      main.cpp
)
include_directories(
  ../../
  ../../include
)   

message(STATUS "CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES: ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}")
include_directories(SYSTEM ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})

find_package(CUDAToolkit REQUIRED)

add_executable(${NVIMGCDCS_EXAMPLE_HIGH_LEVEL_API_NAME} ${NVIMGCDCS_EXAMPLE_HIGH_LEVEL_API_SRC})

set_property(TARGET ${NVIMGCDCS_EXAMPLE_HIGH_LEVEL_API_NAME} PROPERTY CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(${NVIMGCDCS_EXAMPLE_HIGH_LEVEL_API_NAME} PUBLIC nvimgcodecs nvpnm_ext_static CUDA::cudart)

install(TARGETS ${NVIMGCDCS_EXAMPLE_HIGH_LEVEL_API_NAME}
    DESTINATION bin COMPONENT Applications
  )
