set(EXAMPLE_NVIMGCDCS_LIBRARY_NAME nvbmp)  

set(EXAMPLE_NVIMGCDCS_SRC
      example_module.cpp
      example_encoder.cpp
      example_decoder.cpp
      example_parser.cpp
)
include_directories(
  ../../include
  SYSTEM ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
)     
    
add_library(${EXAMPLE_NVIMGCDCS_LIBRARY_NAME} SHARED ${EXAMPLE_NVIMGCDCS_SRC})

if(UNIX)
set_target_properties(${EXAMPLE_NVIMGCDCS_LIBRARY_NAME} PROPERTIES 
        POSITION_INDEPENDENT_CODE ON 
        VERSION ${PROJECT_VERSION}
        SOVERSION ${PROJECT_VERSION_MAJOR} )
else()
set_target_properties(${EXAMPLE_NVIMGCDCS_LIBRARY_NAME} PROPERTIES 
        POSITION_INDEPENDENT_CODE ON 
        VERSION ${PROJECT_VERSION}
        OUTPUT_NAME ${EXAMPLE_NVIMGCDCS_LIBRARY_NAME}_${PROJECT_VERSION_MAJOR}
        ARCHIVE_OUTPUT_NAME ${EXAMPLE_NVIMGCDCS_LIBRARY_NAME})
endif()


if(UNIX)
        install(TARGETS ${EXAMPLE_NVIMGCDCS_LIBRARY_NAME}
                LIBRARY DESTINATION plugins
                PUBLIC_HEADER DESTINATION include
        )

else()
install(TARGETS  ${EXAMPLE_NVIMGCDCS_LIBRARY_NAME}
        RUNTIME DESTINATION plugins
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64
    PUBLIC_HEADER DESTINATION include 
        )
endif()

